--- a/literate-config.org
+++ b/literate-config.org
@@ -11,7 +11,9 @@
        company           ; the ultimate code completion backend
        ;;helm              ; the *other* search engine for love and life
        ;;ido               ; the other *other* search engine...
-       ivy               ; a search engine for love and life
+       (ivy
+        +icons
+        +prescient)               ; a search engine for love and life
 
        :ui
        ;;deft              ; notational velocity for Emacs
@@ -36,7 +38,7 @@
        (evil +everywhere); come to the dark side, we have cookies
        file-templates    ; auto-snippets for empty files
        fold              ; (nigh) universal code folding
-       ;;(format +onsave)  ; automated prettiness
+       (format +onsave)  ; automated prettiness
        ;;multiple-cursors  ; editing in many places at once
        ;;objed             ; text object editing for the innocent
        ;;parinfer          ; turn lisp into python, sort of
@@ -67,24 +69,31 @@
        (eval +overlay)     ; run code, run (also, repls)
        ;;gist              ; interacting with github gists
        lookup              ; navigate your code and its documentation
-       magit             ; a git porcelain for Emacs
-       pdf               ; pdf enhancements
-       ;;rgb               ; creating color strings
+       magit               ; a git porcelain for Emacs
+       pdf                 ; pdf enhancements
+       rgb               ; creating color strings
 
        :os
        (:if IS-MAC macos)  ; improve compatibility with macOS
 
        :lang
-       emacs-lisp        ; drown in parentheses
-       latex             ; writing papers in Emacs has never been so fun
+       emacs-lisp          ; drown in parentheses
+       latex               ; writing papers in Emacs has never been so fun
        ;;markdown          ; writing docs for people to ignore
-       (org +roam +dragndrop +gnuplot +pandoc +present)
+
+       (org                ; organize your plain life in plain text
+        +roam
+        +dragndrop
+        +gnuplot
+        +pandoc
+        +present)
+
        plantuml          ; diagrams for confusing people more
        sh                ; she sells {ba,z,fi}sh shells on the C xor
        yaml              ; JSON, but readable
 
        :email
-       mu4e
+       (mu4e +org)
        ;;notmuch
        ;;(wanderlust +gmail)
 
