--- a/literate-config.org
+++ b/literate-config.org
@@ -583,7 +583,7 @@ r 为未来现金流折现率， n为企业未来存活年数"
                 :scale 2.0
                 :matchers ("begin" "$1" "$" "$$" "\\(" "\\["))))
 
-    ;; Colorize org babel output. Without this color codes are left in the output.
+  ;; Colorize org babel output. Without this color codes are left in the output.
   (defun my/display-ansi-colors ()
     (interactive)
     (let ((inhibit-read-only t))
@@ -621,8 +621,34 @@ r 为未来现金流折现率， n为企业未来存活年数"
   ;; I want all of finished tasks to archive in one file --archive.org
   (setq org-archive-location (concat org-directory "archive.org::")))
 
+(after! org
+  (map! :map org-mode-map
+        :localleader
+        :desc "View exported file" "v" #'org-view-output-file)
 
+  (defun org-view-output-file (&optional org-file-path)
+    "Visit buffer open on the first output file (if any) found, using `org-view-output-file-extensions'"
+    (interactive)
+    (let* ((org-file-path (or org-file-path (buffer-file-name) ""))
+           (dir (file-name-directory org-file-path))
+           (basename (file-name-base org-file-path))
+           (output-file nil))
+      (dolist (ext org-view-output-file-extensions)
+        (unless output-file
+          (when (file-exists-p
+                 (concat dir basename "." ext))
+            (setq output-file (concat dir basename "." ext)))))
+      (if output-file
+          (if (member (file-name-extension output-file) org-view-external-file-extensions)
+              (browse-url-xdg-open output-file)
+            (pop-to-buffer (or (find-buffer-visiting output-file)
+                               (find-file-noselect output-file))))
+        (message "No exported file found"))))
 
+  (defvar org-view-output-file-extensions '("pdf" "md" "rst" "txt" "tex" "html")
+    "Search for output files with these extensions, in order, viewing the first that matches")
+  (defvar org-view-external-file-extensions '("html")
+    "File formats that should be opened externally."))
 #+end_src
 *** org agenda related
 #+begin_src emacs-lisp :tangle "~/.doom.d/config.el"
