add package org-super-agenda

--- a/literate-config.org
+++ b/literate-config.org
@@ -136,6 +136,8 @@
 
 (package! calibredb)
 (package! nov)
+
+(package! org-super-agenda)
 #+end_src
 
 * Config of everything(config.el)
@@ -1138,5 +1140,56 @@ r 为未来现金流折现率， n为企业未来存活年数"
     )
 
   (add-hook 'nov-mode-hook #'+nov-mode-setup))
+
+
+
+(use-package! org-super-agenda
+  :commands (org-super-agenda-mode))
+
+(after! org-agenda
+  (org-super-agenda-mode))
+
+(setq org-agenda-custom-commands
+      '(("o" "Overview"
+         ((agenda "" ((org-agenda-span 'day)
+                      (org-super-agenda-groups
+                       '((:name "Today"
+                          :time-grid t
+                          :date today
+                          :todo "TODAY"
+                          :scheduled today
+                          :order 1)))))
+          (alltodo "" ((org-agenda-overriding-header "")
+                       (org-super-agenda-groups
+                        '((:name "Next to do"
+                           :todo "NEXT"
+                           :order 1)
+                          (:name "Important"
+                           :tag "Important"
+                           :priority "A"
+                           :order 6)
+                          (:name "Due Today"
+                           :deadline today
+                           :order 2)
+                          (:name "Due Soon"
+                           :deadline future
+                           :order 8)
+                          (:name "Overdue"
+                           :deadline past
+                           :face error
+                           :order 7)
+                          (:name "Write"
+                           :tag "Write"
+                           :order 10)
+                          (:name "Emacs"
+                           :tag "Emacs"
+                           :order 13)
+                          (:name "To read"
+                           :tag "Read"
+                           :order 30)
+                          (:name "Waiting"
+                           :todo "WAITING"
+                           :order 20)
+                          (:discard (:tag ("Chore" "Routine" "Daily")))))))))))
 
 #+end_src
