--- a/literate-config.org
+++ b/literate-config.org
@@ -143,6 +143,7 @@
   :recipe (:host github :repo "awth13/org-appear"))
 
 (package! org-special-block-extras)
+(package! ob-mermaid)
 #+end_src
 
 * Config of everything(config.el)
@@ -1234,4 +1235,8 @@ r 为未来现金流折现率， n为企业未来存活年数"
   ;; ‘org-special-block-extras--defblock’
   (org-special-block-extras-short-names)
   (setq org-export-allow-bind-keywords t))
+
+
+;; you Need brew install mermaid-cli first
+(use-package! ob-mermaid)
 #+end_src
